// proto/kari/agent/v1/agent.proto
syntax = "proto3";

package kari.agent.v1;

// üõ°Ô∏è SOLID: Namespaced for Go internal visibility
option go_package = "kari/api/internal/grpc/rustagent";

// ==============================================================================
// 1. The gRPC Service Definition (The Contract)
// ==============================================================================

service SystemAgent {
  // üõ°Ô∏è SLA: Heartbeat & Resource Monitoring for the Brain's Prober
  rpc GetSystemStatus (Empty) returns (SystemStatus);

  // üì¶ Execution & Isolation
  rpc ExecutePackageCommand(PackageRequest) returns (AgentResponse);
  rpc ProvisionAppJail(ProvisionJailRequest) returns (AgentResponse);
  rpc ManageService(ServiceRequest) returns (AgentResponse);
  
  // üõ°Ô∏è SLA Enforcement: Server-Side Streaming for Log Backpressure
  rpc StreamDeployment(DeployRequest) returns (stream LogChunk);

  // üõ†Ô∏è Filesystem & Infrastructure
  rpc WriteSystemFile(FileWriteRequest) returns (AgentResponse);
  rpc InstallCertificate(SslPayload) returns (AgentResponse);
  
  // üõ°Ô∏è Abstract Policy Intent
  rpc ApplyFirewallPolicy(FirewallPolicy) returns (AgentResponse);
  rpc ScheduleJob(JobIntent) returns (AgentResponse);
}

// ==============================================================================
// 2. Telemetry & Standardized Responses
// ==============================================================================

message Empty {}

message SystemStatus {
  bool healthy = 1;
  uint32 active_jails = 2;
  float cpu_usage_percent = 3;
  float memory_usage_mb = 4;
  string agent_version = 5;
  uint64 uptime_seconds = 6;
}

message AgentResponse {
  bool success = 1;
  int32 exit_code = 2;
  string stdout = 3;
  string stderr = 4;
  string error_message = 5;
}

// üõ°Ô∏è Real-time observability payload for SvelteKit SSE
message LogChunk {
  string trace_id = 1;
  string content = 2; // Raw ANSI output from the Rust sub-process
}

// ==============================================================================
// 3. Abstract Intent Payloads (Zero-Trust & OS-Agnostic)
// ==============================================================================

message FirewallPolicy {
  enum Action { ALLOW = 0; DENY = 1; REJECT = 2; }
  enum Protocol { TCP = 0; UDP = 1; BOTH = 2; }
  
  Action action = 1;
  uint32 port = 2; // Validated in Rust as 1-65535
  Protocol protocol = 3;
  
  // üõ°Ô∏è Optional: Enforces strict source-based filtering
  optional string source_ip = 4; 
}

message JobIntent {
  string job_name = 1;
  
  // üõ°Ô∏è Zero-Trust: Split to prevent shell injection via OS execve
  string binary = 2;
  repeated string args = 3;
  
  string schedule_expression = 4; // Cron format
  string run_as_user = 5;
}

message SslPayload {
  string domain_name = 1;
  bytes fullchain_pem = 2;
  bytes privkey_pem = 3; // üõ°Ô∏è Privacy: Rust agent must zeroize this buffer!
}

// ==============================================================================
// 4. Operational Payloads
// ==============================================================================

message PackageRequest {
  string command = 1;         
  repeated string args = 2;   
}

message FileWriteRequest {
  string trace_id = 1;        
  string absolute_path = 2;   
  bytes content = 3;          
  string owner = 4;           
  string group = 5;           
  string file_mode = 6;       
}

message ServiceRequest {
  string service_name = 1;    
  ServiceAction action = 2;   
}

message ProvisionJailRequest {
  string app_id = 1;          
  string domain_name = 2;     
  string start_command = 3;   
  map<string, string> env_vars = 4; 
  uint32 memory_limit_mb = 5; // üõ°Ô∏è SLA: Hard-limit enforcement
}

message DeployRequest {
  string trace_id = 1;        // Links stream to Dashboard Action Center
  string app_id = 2;
  string domain_name = 3;
  string repo_url = 4;        
  string branch = 5;          
  string build_command = 6;   
  map<string, string> env_vars = 7; 
}

enum ServiceAction {
  START = 0;
  STOP = 1;
  RESTART = 2;
  RELOAD = 3;
  ENABLE = 4;
  DISABLE = 5;
}
